--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "autoprefixer": "^10.4.8",
     "axios": "^0.27.2",
     "babel-jest": "^28.1.3",
+    "broadcast-channel": "^4.14.0",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.13",
     "jest": "^28.1.3",
