--- a/tsconfig.json
+++ b/tsconfig.json
@@ -26,7 +26,8 @@
      * of JS in `.svelte` files.
      */
     "allowJs": true,
-    "checkJs": true
+    "checkJs": true,
+    "typeRoots": ["src/@types", "node_modules/@types"],
   },
   /**
    * Use globals.d.ts instead of compilerOptions.types
