--- a/tsconfig.json
+++ b/tsconfig.json
@@ -33,5 +33,5 @@
    * Use globals.d.ts instead of compilerOptions.types
    * to avoid limiting type declarations.
    */
-  "include": ["globals.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
+  "include": ["src/globals.d.ts", "src/**/*.ts", "src/**/*.js", "src/**/*.svelte"]
 }
