--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "build": "vite build",
     "test": "jest",
     "test:watch": "jest --watchAll",
-    "serve": "vite preview"
+    "serve": "vite preview",
+    "postinstall": "patch-package"
   },
   "type": "module",
   "devDependencies": {
     "@sveltejs/vite-plugin-svelte": "^1.0.2",
     "@sveltestack/svelte-query": "^1.6.0",
+    "@tailwindcss/line-clamp": "^0.4.2",
     "@testing-library/svelte": "^3.2.1",
     "@types/jest": "^28.1.7",
     "autoprefixer": "^10.4.8",
@@ -22,6 +24,7 @@
     "cssnano": "^5.1.13",
     "jest": "^28.1.3",
     "kaios-lib": "^1.6.0",
+    "patch-package": "^6.4.7",
     "postcss": "^8.4.16",
     "postcss-load-config": "^4.0.1",
     "svelte": "^3.49.0",
@@ -31,6 +34,7 @@
     "svelte-query": "^0.0.1-alpha1",
     "svelte-spa-router": "^3.3.0",
     "tailwindcss": "^3.1.8",
+    "tailwindcss-gradients": "^3.0.0",
     "ts-jest": "^28.0.8",
     "typescript": "^4.7.4",
     "uuid": "^8.3.2",
