--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "23PM",
-  "version": "0.1.3",
+  "name": "23pm",
+  "version": "0.1.4",
   "scripts": {
     "dev": "cross-env NODE_ENV=development vite",
     "build": "vite build",
