--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "svelte-preprocess": "^4.10.7",
     "svelte-query": "^0.0.1-alpha1",
     "svelte-spa-router": "^3.3.0",
+    "svelte-time": "^0.7.1",
     "tailwindcss": "^3.1.8",
     "tailwindcss-gradients": "^3.0.0",
     "ts-jest": "^28.0.8",
