--- a/package.json
+++ b/package.json
@@ -7,28 +7,31 @@
     "test": "jest",
     "test:watch": "jest --watchAll",
     "serve": "vite preview",
-    "postinstall": "patch-package"
+    "postinstall": "patch-package",
+    "check": "svelte-check --tsconfig ./tsconfig.json --threshold error"
   },
   "type": "module",
   "devDependencies": {
-    "@sveltejs/vite-plugin-svelte": "^1.0.2",
+    "@sveltejs/vite-plugin-svelte": "^1.0.8",
     "@sveltestack/svelte-query": "^1.6.0",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@testing-library/svelte": "^3.2.1",
-    "@types/jest": "^28.1.7",
-    "autoprefixer": "^10.4.8",
+    "@types/jest": "^29.0.3",
+    "@types/uuid": "^8.3.4",
+    "autoprefixer": "^10.4.12",
     "axios": "^0.27.2",
-    "babel-jest": "^28.1.3",
-    "broadcast-channel": "^4.14.0",
+    "babel-jest": "^29.0.3",
+    "broadcast-channel": "^4.17.0",
     "cross-env": "^7.0.3",
     "cssnano": "^5.1.13",
     "highlight-words": "^1.2.0",
-    "jest": "^28.1.3",
+    "jest": "^29.0.3",
     "kaios-lib": "^1.6.0",
     "patch-package": "^6.4.7",
     "postcss": "^8.4.16",
     "postcss-load-config": "^4.0.1",
-    "svelte": "^3.49.0",
+    "svelte": "^3.50.1",
+    "svelte-check": "^2.9.0",
     "svelte-icons": "^2.1.0",
     "svelte-jester": "^2.3.2",
     "svelte-preprocess": "^4.10.7",
@@ -37,9 +40,9 @@
     "svelte-time": "^0.7.1",
     "tailwindcss": "^3.1.8",
     "tailwindcss-gradients": "^3.0.0",
-    "ts-jest": "^28.0.8",
-    "typescript": "^4.7.4",
-    "uuid": "^8.3.2",
-    "vite": "^3.0.9"
+    "ts-jest": "^29.0.1",
+    "typescript": "^4.8.3",
+    "uuid": "^9.0.0",
+    "vite": "^3.1.3"
   }
 }
