--- a/package.json
+++ b/package.json
@@ -1,9 +1,10 @@
 {
   "name": "23pm",
-  "version": "0.2.4",
+  "version": "0.2.5",
   "scripts": {
     "dev": "cross-env NODE_ENV=development vite",
     "build": "vite build",
+    "build:legacy": "cross-env IS_LEGACY_BUILD=true vite build",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "serve": "vite preview",
@@ -18,6 +19,7 @@
     "@testing-library/svelte": "^3.2.2",
     "@types/jest": "^29.2.2",
     "@types/uuid": "^8.3.4",
+    "@vitejs/plugin-legacy": "^2.3.1",
     "autoprefixer": "^10.4.13",
     "axios": "^1.1.3",
     "babel-jest": "^29.3.1",
@@ -40,6 +42,7 @@
     "svelte-time": "^0.7.1",
     "tailwindcss": "^3.2.4",
     "tailwindcss-gradients": "^3.0.0",
+    "terser": "^5.15.1",
     "ts-jest": "^29.0.3",
     "typescript": "^4.8.4",
     "uuid": "^9.0.0",
