--- a/package.json
+++ b/package.json
@@ -4,24 +4,34 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development vite",
     "build": "vite build",
-    "build:legacy": "cross-env IS_LEGACY_BUILD=true vite build",
+    "build:legacy": "rollup -c",
+    "postinstall": "patch-package",
     "test": "jest",
     "test:watch": "jest --watchAll",
     "serve": "vite preview",
-    "postinstall": "patch-package",
     "check": "svelte-check --tsconfig ./tsconfig.json --threshold error"
   },
   "type": "module",
   "devDependencies": {
+    "@babel/plugin-syntax-dynamic-import": "^7.8.3",
+    "@babel/plugin-transform-runtime": "^7.19.6",
+    "@babel/preset-env": "^7.20.2",
+    "@rollup/plugin-babel": "^6.0.2",
+    "@rollup/plugin-commonjs": "^23.0.2",
+    "@rollup/plugin-image": "^3.0.1",
+    "@rollup/plugin-node-resolve": "^15.0.1",
+    "@rollup/plugin-replace": "^5.0.1",
+    "@rollup/plugin-terser": "^0.1.0",
+    "@rollup/plugin-typescript": "^9.0.2",
     "@sveltejs/vite-plugin-svelte": "^1.1.1",
     "@sveltestack/svelte-query": "^1.6.0",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@testing-library/svelte": "^3.2.2",
+    "@tsconfig/svelte": "^3.0.0",
     "@types/jest": "^29.2.2",
     "@types/uuid": "^8.3.4",
-    "@vitejs/plugin-legacy": "^2.3.1",
     "autoprefixer": "^10.4.13",
-    "axios": "^1.1.3",
+    "axios": "^1.2.0",
     "babel-jest": "^29.3.1",
     "broadcast-channel": "^4.18.1",
     "cross-env": "^7.0.3",
@@ -32,6 +42,10 @@
     "patch-package": "^6.5.0",
     "postcss": "^8.4.19",
     "postcss-load-config": "^4.0.1",
+    "rollup": "^3.4.0",
+    "rollup-plugin-css-only": "^4.3.0",
+    "rollup-plugin-polyfill-node": "^0.11.0",
+    "rollup-plugin-svelte": "^7.1.0",
     "svelte": "^3.53.1",
     "svelte-check": "^2.9.2",
     "svelte-icons": "^2.1.0",
@@ -44,6 +58,7 @@
     "tailwindcss-gradients": "^3.0.0",
     "terser": "^5.15.1",
     "ts-jest": "^29.0.3",
+    "tslib": "^2.4.1",
     "typescript": "^4.8.4",
     "uuid": "^9.0.0",
     "vite": "^3.2.3"
