--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "scripts": {
     "dev": "cross-env NODE_ENV=development vite",
     "build": "vite build",
-    "build:legacy": "rollup -c",
+    "build:legacy": "cross-env IS_LEGACY=true vite build",
+    "build:es5": "rollup -c",
     "postinstall": "patch-package",
     "test": "jest",
     "test:watch": "jest --watchAll",
@@ -40,10 +41,12 @@
     "jest": "^29.3.1",
     "kaios-lib": "^1.6.0",
     "patch-package": "^6.5.0",
+    "path": "^0.12.7",
     "postcss": "^8.4.19",
     "postcss-load-config": "^4.0.1",
     "rollup": "^3.4.0",
     "rollup-plugin-css-only": "^4.3.0",
+    "rollup-plugin-delete": "^2.0.0",
     "rollup-plugin-polyfill-node": "^0.11.0",
     "rollup-plugin-svelte": "^7.1.0",
     "svelte": "^3.53.1",
