--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.2.5",
   "scripts": {
     "dev": "cross-env NODE_ENV=development vite",
+    "dev:legacy": "cross-env NODE_ENV=development IS_LEGACY=true vite",
     "build": "vite build",
     "build:legacy": "cross-env IS_LEGACY=true vite build",
-    "build:es5": "rollup -c",
     "postinstall": "patch-package",
     "test": "jest",
     "test:watch": "jest --watchAll",
@@ -24,12 +24,12 @@
     "@rollup/plugin-replace": "^5.0.1",
     "@rollup/plugin-terser": "^0.1.0",
     "@rollup/plugin-typescript": "^9.0.2",
-    "@sveltejs/vite-plugin-svelte": "^1.1.1",
+    "@sveltejs/vite-plugin-svelte": "^1.3.1",
     "@sveltestack/svelte-query": "^1.6.0",
     "@tailwindcss/line-clamp": "^0.4.2",
     "@testing-library/svelte": "^3.2.2",
     "@tsconfig/svelte": "^3.0.0",
-    "@types/jest": "^29.2.2",
+    "@types/jest": "^29.2.3",
     "@types/uuid": "^8.3.4",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.0",
@@ -59,11 +59,11 @@
     "svelte-time": "^0.7.1",
     "tailwindcss": "^3.2.4",
     "tailwindcss-gradients": "^3.0.0",
-    "terser": "^5.15.1",
+    "terser": "^5.16.0",
     "ts-jest": "^29.0.3",
     "tslib": "^2.4.1",
-    "typescript": "^4.8.4",
+    "typescript": "^4.9.3",
     "uuid": "^9.0.0",
-    "vite": "^3.2.3"
+    "vite": "^3.2.4"
   }
 }
